--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <head>
     <title>dorrisd.com</title>
-      
+
     <style>
       body {
         background-color: #648fb9;
@@ -14,7 +14,12 @@
         font-size: 250%;
         font-family: Ubuntu;
         font-style: normal;
-        background-color: #4f4f4f;
+		width: 40%;
+	    margin-left: auto;
+	    margin-right: auto;
+	    text-align: center;
+	    border-color:rgba(51,51,51,0.65);
+        background-color: #648fb9;
         color: #ffffff;
       }
     </style>
@@ -23,8 +28,13 @@
   <body>
     <div class = "maintext">
       <p><center>Hello!</center></p>
-      <center>This is an incomplete page.<br />
-      <a href="https://github.com/drewdorris">Visit my GitHub</a></center>
+      <hr>
+      <center>This is an incomplete page.</center>
+	  <br />
+	  <p><a href="https://github.com/drewdorris">
+        <img src="assets/img/github.png" alt="GitHub" style="height: 50px; width: 50px"></a>
+	  <a href="mailto:contact@dorrisd.com">
+        <img src="assets/img/mail.png" alt="Mail" style="height: 50px"></a></p>
     </div>
   </body>
     
