--- a/index.html
+++ b/index.html
@@ -1,40 +1,69 @@
 <!DOCTYPE html>
 
 <html>
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 
   <head>
     <title>dorrisd.com</title>
 
     <style>
+      @font-face {
+        font-family: 'Ubuntu';
+        font-style: normal;
+        font-weight: 400;
+        src: local('Ubuntu Regular'), local('Ubuntu-Regular'), url(http://fonts.gstatic.com/s/ubuntu/v12/4iCs6KVjbNBYlgoKfw7z.ttf) format('truetype');
+      }
+
       body {
         background-color: #648fb9;
       }
+
       .maintext {
         font-size: 250%;
         font-family: Ubuntu;
         font-style: normal;
-		width: 40%;
-	    margin-left: auto;
-	    margin-right: auto;
-	    text-align: center;
-	    border-color:rgba(51,51,51,0.65);
-        background-color: #648fb9;
+        width: 40%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
         color: #ffffff;
+        transition: .5s ease;
+      }
+      .maintext:hover {
+        width: 60%;
+      }
+
+      .links {
+        margin-top: 10%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+      }
+      .github {
+        transition: .25s ease;
+      }
+      .github:hover {
+        opacity: .5;
+      }
+      .mail {
+        transition: .25s ease;
+      }
+      .mail:hover {
+        opacity: .5;
       }
     </style>
   </head>
     
   <body>
     <div class = "maintext">
-      <p><center>Hello!</center></p>
+      <center>Hello!</center>
       <hr>
       <center>This is an incomplete page.</center>
-	  <br />
-	  <p><a href="https://github.com/drewdorris">
-        <img src="assets/img/github.png" alt="GitHub" style="height: 50px; width: 50px"></a>
-	  <a href="mailto:contact@dorrisd.com">
-        <img src="assets/img/mail.png" alt="Mail" style="height: 50px"></a></p>
+    </div>
+    <div class = "links">
+      <a class="github" href="https://github.com/drewdorris">
+      <img src="assets/img/github.png" alt="GitHub" style="height: 50px; width: 50px"></a>&nbsp;
+      <a class="mail" href="mailto:contact@dorrisd.com">
+      <img src="assets/img/mail.png" alt="Mail" style="height: 50px"></a>
     </div>
   </body>
     
