--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         font-family: 'Ubuntu';
         font-style: normal;
         font-weight: 400;
-        src: local('Ubuntu Regular'), local('Ubuntu-Regular'), url(http://fonts.gstatic.com/s/ubuntu/v12/4iCs6KVjbNBYlgoKfw7z.ttf) format('truetype');
+        src: local('Ubuntu Regular'), local('Ubuntu-Regular'), url(https://fonts.gstatic.com/s/ubuntu/v12/4iCs6KVjbNBYlgoKfw7z.ttf) format('truetype');
       }
 
       body {
