remove some effects, minor

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   <body>
     <div class="maintext">
-      <div class="hello"><center>Hello!</center></div>
-      <hr>
+      <center>Hello!</center>
+	  <hr>
       <center>My name is Drew.</center></div>
 
     <div class="links">
